<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.furkan.fk.ProfileActivity">

    <TextView
        android:id="@+id/profile_displayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:text="@string/display_namePA"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/profile_imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@mipmap/default_avatar" />

    <TextView
        android:id="@+id/profile_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/profile_displayName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:text="@string/current_user_status" />

    <TextView
        android:id="@+id/profile_totalFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_status"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:text="@string/total_friends" />

    <Button
        android:id="@+id/profile_sendRequest_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/profile_declineRequest_button"
        android:layout_below="@+id/profile_totalFriends"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/SEND_FRIEND_REQUEST"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/profile_declineRequest_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_sendRequest_button"
        android:layout_centerHorizontal="true"
        android:text="@string/decline_friend_request" />
</RelativeLayout>
