<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.furkan.fk.SettingsActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_circleImage"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@mipmap/default_avatar" />

    <TextView
        android:id="@+id/settings_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_circleImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/display_name2"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/settings_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_display_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/status"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/settings_change_circleImage"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/settings_change_status"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/change_image"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/settings_change_status"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/settings_change_circleImage"
        android:layout_marginBottom="11dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/change_status"
        android:textColor="@android:color/white" />
</RelativeLayout>
