<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.furkan.fk.StartActivity"
    android:background="@color/colorPrimary">

    <Button
        android:id="@+id/start_register_button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/start_LoginButton"
        android:layout_marginBottom="101dp"
        android:text="@string/need_a_new_account" />

    <Button
        android:id="@+id/start_LoginButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/start_register_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="19dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/already_have_an_account"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/start_LoginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="131dp"
        android:text="@string/welcome_to_fk"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleSignIn_button"
        android:layout_width="180dp"

        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/facebookSignIn_button" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebookSignIn_button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/googleSignIn_button"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="12dp" />
</RelativeLayout>
